FIX: container spacing on mobile devices

--- a/src/layouts/DefaultLayout/styles.module.scss
+++ b/src/layouts/DefaultLayout/styles.module.scss
@@ -10,7 +10,7 @@
 
   @media(max-width: 768px) {
     height: calc(100vh - 10rem);
-    padding: 2rem;
+    padding: 2rem 1rem 3.5rem;
 
     h1 {
       font-size: 1.5rem;
